# PPainter

./: CMakeLists.txt  README.md  main.cpp
exp/bulid/: CMakeCache.txt  Makefile  PixelWhiteboard  cmake_install.cmake
exp/bulid/.qt/: QtDeployTargets.cmake
exp/bulid/PixelWhiteboard_autogen/: mocs_compilation.cpp
exp/bulid/PixelWhiteboard_autogen/PRMOGMWJPH/: moc_brush_tool.cpp.d  moc_drawing_tool.cpp  moc_drawing_tool.cpp.d  moc_eraser_tool.cpp  moc_eraser_tool.cpp.d  moc_pixel_canvas.cpp  moc_selection_tool.cpp
exp/bulid/PixelWhiteboard_autogen/UFQQIFJZKK/: moc_protocol_handler.cpp  moc_protocol_handler.cpp.d
exp/bulid/PixelWhiteboard_autogen/YPKJ5OE7LN/: moc_canvas_widget.cpp  moc_canvas_widget.cpp.d  moc_color_palette.cpp  moc_layer_panel.cpp.d  moc_main_window.cpp.d  moc_tool_bar.cpp.d
exp/config/: app_config.cpp  app_config.h
exp/src/core/: brush_tool.cpp  command_system.cpp  command_system.h  drawing_tool.cpp  selection_tool.cpp
exp/src/network/: network_manager.cpp  network_manager.h  protocol_handler.cpp  sync_manager.cpp
exp/src/ui/: canvas_widget.cpp  canvas_widget.h  layer_panel.h  main_window.cpp  main_window.h
exp/src/utils/: math_utils.cpp  math_utils.h
src/: DrawingArea.cpp  DrawingArea.h  DrawingTool.cpp  DrawingTool.h  MainWindow.cpp  MainWindow.h
src/core/: brush_tool.h  command_system.h  drawing_tool.h  eraser_tool.h  pixel_canvas.h
src/network/: network_manager.h  sync_manager.h
src/ui/: canvas_widget.h  color_palette.h  layer_panel.h  main_window.h  tool_bar.h
src/utils/: image_utils.h
废案/: CMakeLists.txt  main.cpp  pch.h
废案/config/: app_config.h
废案/exp/: CMakeLists.txt  main.cpp
废案/exp/bulid/.qt/: QtDeploySupport.cmake
废案/exp/bulid/PixelWhiteboard_autogen/: deps  moc_predefs.h
废案/exp/bulid/PixelWhiteboard_autogen/PRMOGMWJPH/: moc_brush_tool.cpp  moc_command_system.cpp  moc_command_system.cpp.d  moc_pixel_canvas.cpp.d  moc_selection_tool.cpp.d
废案/exp/bulid/PixelWhiteboard_autogen/UFQQIFJZKK/: moc_network_manager.cpp  moc_network_manager.cpp.d  moc_sync_manager.cpp  moc_sync_manager.cpp.d
废案/exp/bulid/PixelWhiteboard_autogen/YPKJ5OE7LN/: moc_color_palette.cpp.d  moc_layer_panel.cpp  moc_main_window.cpp  moc_tool_bar.cpp
废案/exp/resources/: resources.qrc
废案/exp/src/core/: brush_tool.h  drawing_tool.h  eraser_tool.cpp  eraser_tool.h  pixel_canvas.cpp  pixel_canvas.h  selection_tool.h
废案/exp/src/network/: protocol_handler.h  sync_manager.h
废案/exp/src/ui/: color_palette.cpp  color_palette.h  layer_panel.cpp  tool_bar.cpp  tool_bar.h
废案/exp/src/utils/: image_utils.cpp  image_utils.h
废案/src/network/: network_manager.h  protocol_handler.h  sync_manager.h
废案/src/ui/: canvas_widget.h  main_window.cpp
废案/src/utils/: math_utils.h
